FOM-91: - Add ProjectCommentClassificationMandatoryChangeRequest - Add commentClassificationMandatoryChange controller method - Add partial commentClassificationMandatoryChange service method imementation - Update OpenAPI and create api-client - Adjust frontend button/component to call backend new api
